--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,11 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
-- script: echo Hello, world!
-  displayName: 'Run a one-line script'
+- script: echo Hello, world - always!
+  condition: always()
 
-- script: |
-    echo Add other tasks to build, test, and deploy your project.
-    echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script'
+- script: echo Hello, world - on success!
+  condition: succeeded()
+
+- script: echo Hello, world - on failure!
+  condition: failed()
