Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,5 +16,7 @@ steps:
 - script: echo Hello, world - on success!
   condition: succeeded()
 
+- powershell: throw 
+
 - script: echo Hello, world - on failure!
   condition: failed()
